Fix issue where onClick is disabled when a project is blurred.

--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -18,8 +18,12 @@
   margin: auto;
   z-index: 100;
   color: white;
-  position: absolute;
+  position: relative;
   font-size: 2.5vw;
   text-align: left;
   width: 30%;
+  top: -200px;
+  margin-bottom: 0;
+  margin-top: -2vh;
+  height: 0;
 }
