--- a/client/src/components/Projects/Projects.css
+++ b/client/src/components/Projects/Projects.css
@@ -21,7 +21,6 @@
     flex-direction: row;
     margin-left: auto;
     margin-right: auto;
-    background-color:gray;
 }
 
 .projects__desc-area {
@@ -33,6 +32,8 @@
     background-color: white;
     margin-right: auto;
     margin-left: auto;
+    padding-top: 2vh;
+    height: 25vh;
 }
 
 .project__desc-area p {
